# 3rd-sem

./: .gitignore  3rd-sem.sln  CMakeLists.txt  Queue.h  README.md  documentation.h  main.cpp  tests.cpp
2ndTask/: Queue.h
ConsoleApplication1/: Apartment.cpp  Apartment.h  Client.cpp  Client.h  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  Documentation.h  House.cpp  House.h  Property.cpp  Property.h  RealEstateManager.cpp  RealEstateManager.h  main.cpp
Sample-Test1/: Sample-Test1.vcxproj  pch.h  test.cpp
demo/: main.cpp
domain/: Client.cpp  Client.h  Exercise.h  Generator.h  IStreamGenerator.h  Manager.cpp  Manager.h  Matrix.h  Property.cpp  Property.h  Queue.h  RandomGenerator.h  Task1.h  Task2.h
tests/: pch.h  test.cpp  tests.cpp
